creatin modal dialog

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "bootstrap": "^5.3.3",
     "motion": "^12.4.10",
     "next": "15.1.7",
